--- a/css/main.css
+++ b/css/main.css
@@ -47,3 +47,11 @@ div {
 .btn-big {
   font-size: 1.5rem;
 }
+
+.btn:hover {
+  background-color: #000;
+}
+
+.btn-warning:hover {
+  background-color: #933;
+}
